--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <link rel="shortcut icon" href="assets/icons/logo.jpg" type="image/x-icon"/>
         <script defer src="main.js"></script>
         <script defer src="js/utils.js"></script>
-        <script defer src="js/recettes-data.js"></script>
         <script defer src="js/api-functions.js"></script>
         <script defer src="js/favorites-manager.js"></script>
         <script defer src="js/recipe-display.js"></script>
         <script defer src="js/app-init.js"></script>
+        <script defer src="js/favorites-ui.js"></script>
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="css/benoit.css"/>
         <link rel="stylesheet" href="css/laura.css"/>
