css mes favories responsive

--- a/html/favoris.html
+++ b/html/favoris.html
@@ -9,7 +9,7 @@
             href="../assets/icons/logo.jpg"
             type="image/x-icon"
         />
-    <script defer src="../js/favorites-ui.js"></script>
+    <!-- <script defer src="../js/favorites-ui.js"></script> -->
     <script defer src="../main.js"></script>
         <script defer src="../js/utils.js"></script>
         <script defer src="../js/api-functions.js"></script>
@@ -114,23 +114,6 @@
                         </div>
                     </div>
                 </template>
-                    <template class="eachCardFavoris">
-                        <div class="card">
-                            <img class="mealPic" src="" alt=""/>
-                            <div class="heart-buttonDiv">
-                                <img class="heart-button" src="../assets/icons/redHeart.png" alt="Favori" style="cursor: pointer;">
-                            </div>
-                            <div class="recepiePresentation recette-header-index">
-                                <h3></h3>
-                                <div class="infoRecepie">
-                                    <p class="recepieCat"></p>
-                                    <p class="recepieTime"></p>
-                                    <p class="recepieLevel"></p>
-                                </div>
-                                <button class="recetteButton">Voir la recette</button>
-                            </div>
-                        </div>
-                    </template>
             </section>
         </main>
 
