--- a/html/recettes.html
+++ b/html/recettes.html
@@ -50,7 +50,7 @@
         </header>
             
             <main>
-                <div class="recette-detail">
+                <div class="detailRecepie">
                     <button id="favoriButton" class="recetteButton">Ajouter aux favoris</button>
                 
                 <div id="recetteContainer" class="hidden">    
