links + menu burger phone

--- a/html/recettes.html
+++ b/html/recettes.html
@@ -27,7 +27,7 @@
                     <li><a href="../index.html">Accueil</a></li>
                     <li><a href="#">Ajouter une recette</a></li>
                     <li><a href="favoris.html">Mes favoris</a></li>
-                    <li><a href="aPropos.html">À propos</a></li>
+                    <li><a href="a_propos.html">À propos</a></li>
                 </ul>
 
                 <section class="title">
@@ -38,7 +38,7 @@
                     <li><a href="../index.html">Accueil</a></li>
                     <li><a href="#">Ajouter une recette</a></li>
                     <li><a href="favoris.html">Mes favoris</a></li>
-                    <li><a href="a_propos.html">À propos</a></li>
+                      <li><a href="a_propos.html">À propos</a></li>
                     <li><img class="burgerBtn" src="../assets/icons/menu-burger.png" alt="menu burger"/></li>
                 </ul>
 
@@ -51,7 +51,7 @@
             
             <main>
                 <div class="detailRecepie">
-                    <button id="favoriButton" class="recetteButton">Ajouter aux favoris</button>
+                    <button id="favoriButton" class="recepieButton">Ajouter aux favoris</button>
                 
                 <div id="recetteContainer" class="hidden">    
                     <div class="recette-header">
