--- a/html/favoris.html
+++ b/html/favoris.html
@@ -39,7 +39,7 @@
                     <li><a href="../index.html">Accueil</a></li>
                     <li><a href="#">Ajouter une recette</a></li>
                     <li><a href="favoris.html">Mes favoris</a></li>
-                    <li><a href="aPropos.html">À propos</a></li>
+                  <li> <a href="a_propos.html">À propos</a></li>
                 </ul>
                 <section class="title">
                     <div><a href="../index.html">G</a></div>
