--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                 <div id="content"></div>
                 <template class="eachCard">
                     <div class="card">
-                        <img class="mealPic" src="" alt="" />
+                        <img data-picture="0"class="mealPic" src="" alt="" />
                         <div class="moreImages">
-                            <img class="mealPic2 " src="" alt="" />
-                            <img class="mealPic3" src="" alt="" />
+                            <img data-picture="1" class="mealPic2 " src="" alt="" />
+                            <img data-picture="2" class="mealPic3" src="" alt="" />
                         </div>
                         <div class="heart-buttonDiv">
                             <img
